--- a/src/style/custom.less
+++ b/src/style/custom.less
@@ -19,3 +19,29 @@
 button + button {
   margin-left: 10px;
 }
+.ant-tabs .ant-tabs-top-content {
+  padding: 0 20px 10px;
+}
+.ant-tabs-card {
+  .ant-tabs-nav-scroll {
+    background: #f3f4f8;
+  }
+  .ant-tabs-tab {
+    margin: 0 1px 0 0 !important;
+    width: 180px;
+    text-align: center;
+    background: rgba(236,240,244,1) !important;
+    border-radius: 6px 6px 0px 0px !important;
+    padding: 10px 16px;
+    border: none !important; 
+  }
+  .ant-tabs-tab-active {
+    background-color: #fff !important;
+  }
+}
+.ant-modal.ant-modal .ant-modal-body {
+  padding: 30px !important;
+}
+.ant-tabs .ant-tabs-top-content {
+  padding: 10px 30px;
+}
