--- a/src/pages/basedata-assets/children/index.less
+++ b/src/pages/basedata-assets/children/index.less
@@ -35,3 +35,52 @@
     color:#CE2F30;
   }
 }
+.category-model {
+  font-size: 13px;
+  color: #334355;
+  .add {
+    width:104px;
+    height:27px;
+    line-height:27px;
+    box-shadow:0px 2px 8px 0px rgba(0,0,0,0.15);
+    border-radius:4px;
+    border:1px dashed rgba(216,224,232,1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+    cursor: pointer;
+  }
+  .save {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+  }
+  .con {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 13px;
+    .item {
+      padding: 0 12px;
+      height:27px;
+      background: #f9f9f9;
+      box-shadow:0px 2px 8px 0px rgba(0,0,0,0.15);
+      border-radius:4px;
+      border:1px solid rgba(216,224,232,1);
+      margin: 0 10px 13px 0px;
+      font-size: 13px;
+      display: flex;
+      align-items: center;
+    }
+  }
+  .icon-box {
+    transform: rotate(45deg);
+    cursor: pointer;
+  }
+}
+.mr10 {
+  margin-right: 10px;
+}
+.ml10 {
+  margin-left: 10px;
+}
